introSection.css
* {
  margin: 0;
  padding: 0;
}

.meet-heading {
  font-size: 90px;
  text-align: center;
  font-weight: 800;
  padding-top: 30px;
  padding-bottom: 30px;
}
.m-heading {				background-color: rgb(123, 53, 15);
				text-align: center;
        margin-left: 20%;
        margin-right: 20%;
				font-weight: 800;
				color: aliceblue;
				padding-top: 30px;
				padding-bottom: 30px;
}

/* CORRECT THE HERO IMAGE: I also changed the height to a 850px to give clearer view of the cute puppies */
.main-body-section-div{
  /* background: url("./Assets/Images/main-heading-body-bg.jpg") no-repeat center
    center/cover; */
  background-repeat: no-repeat!important;
  background-size: cover!important;
  min-height: 850px;
  opacity: 0.9;
  padding-top: 80px;
  transition: background 0.6s ease-in-out;
}

.main-body-heading-text {
  padding-top: 8%;
  padding-left: 5%;


}

/* CORRECT THE HERO IMAGE: The list element style was causing the whitespace. Removing it succesfully fixes the problem */
.main-body-section > li {
  list-style: none;
}

/*CORRECT THE HERO IMAGE: Added display flex property to move image element to the top left  */
.heading-main-body {
  display: flex;
  justify-content: start;
  width: 100%;
}

.main-body-section-div h1 {
  font-size: 64px;
  /* padding-left: 18.8%; */
  color: azure;
  font-weight: bold;
  letter-spacing: 4px;
}
.main-body-section-div p {
  font-size: 20px;
  font-weight: 400;
  letter-spacing: 3px;
}
.main-body-heading-text span{
  color: #c97f06;
  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.5);
}

.pet-card-flex {
  background-image: url("./Assets/Images/pattern\ doodle.png");
  display: flex;
  flex-direction: column;
  padding-top: 20px;
  padding-bottom: 20px;
}

.main-card {
  display: flex;
  flex-direction: row;
  border: 5px rgb(255, 249, 208) solid;
  align-items: center;
  background-color: rgb(255, 231, 202);
  border-radius: 50px;
  overflow: hidden;
  width: 49%;
  justify-content: center;
  margin-top: 10px;
  margin-bottom: 10px;
}

.one-line-card {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

.main-img {
  position: relative;
  background-color: rgb(255, 231, 202);
  border-radius: 50px;
  overflow: hidden;
  transition: all 300ms;
}

.hv {
  position: relative;
  background-size: cover;
  transition: all 300ms;
}

.hv::after {
  transition: all 300ms;
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  background-color: rgb(255, 231, 202);
  top: 0;
  opacity: 0;
}

.hv:hover::after {
  opacity: 0.2;
}

.hv:hover {
  transform: scale(1.1);
}

.card-img-div {
  border-radius: 50px;
}

.card-img-a {
  background-color: rgb(255, 231, 202);
  color: rgb(255, 231, 202);
}

.card-height {
  height: 370px;
}

.card-img-size {
  width: 330px;
  height: 330px; 
  object-fit: cover;
  object-position: 25% 75%;;
}

::-webkit-scrollbar {
  width: 10px;
}
::-webkit-scrollbar-track {
  background-color: antiquewhite;
}
::-webkit-scrollbar-thumb {
  background-clip: content-box;
  border: 2px transparent solid;
  background-color: brown;
  border-radius: 13px;
}

